--- a/cvgen/src/App.css
+++ b/cvgen/src/App.css
@@ -2,7 +2,26 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  display: flex;
+  flex: 1;
+  margin-top: 20px;
+  width: 100%;
+  overflow: hidden;
+}
+
+/* Ensure Profile takes remaining width */
+.main-content>div:nth-child(2) {
+  flex: 1;
+  overflow-y: auto;
 }
 
 .logo {
@@ -11,9 +30,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +43,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -41,10 +63,8 @@
   color: #888;
 }
 
-.header{
+.header {
   margin: 10px;
   justify-content: space-between;
   display: flex;
 }
-
-
